[package]
authors = ["Pietro Lorefice <pietro.lorefice@gmail.com>"]
categories = ["embedded", "network-programming", "no-std"]
description = "A collection of application-layer protocols built on top of smoltcp."
edition = "2018"
homepage = "https://github.com/plorefice/smolapps"
keywords = ["smoltcp", "network"]
license = "MIT OR Apache-2.0"
name = "smolapps"
readme = "README.md"
repository = "https://github.com/plorefice/smolapps"
version = "0.1.3"

[package.metadata.docs.rs]
all-features = true

[dependencies]
smoltcp = { version = "0.6.0", default-features = false }
byteorder = { version = "1.3.4", default-features = false }
managed = { version = "0.7.1", default-features = false }
log = { version = "0.4.8", default-features = false, optional = true }

[dev-dependencies]
env_logger = "0.7.1"

[features]
default = ["ipv4"] # bare minimum to allow smoltcp compilation
sntp = ["smoltcp/socket-udp"]
tftp = ["smoltcp/socket-udp"]
ipv4 = ["smoltcp/proto-ipv4"]

# Standard library support
std = ["smoltcp/std", "managed/std"]

# For test harness
tap = ["log", "smoltcp/ethernet", "smoltcp/phy-tap_interface"]

[[example]]
name = "sntp"
required-features = ["std", "sntp", "tap"]

[[example]]
name = "tftp"
required-features = ["std", "tftp", "tap"]
